--- a/app/src/main/res/drawable/ad_splash_advertise_bg.xml
+++ b/app/src/main/res/drawable/ad_splash_advertise_bg.xml
@@ -6,5 +6,5 @@
         android:bottomRightRadius="@dimen/dp_10"
         android:topLeftRadius="@dimen/dp_10"
         android:topRightRadius="@dimen/dp_10" />
-    <solid android:color="@color/white" />
+    <solid android:color="@android:color/white" />
 </shape>
