--- a/app/src/main/res/drawable/splash_app_bg.xml
+++ b/app/src/main/res/drawable/splash_app_bg.xml
@@ -9,7 +9,7 @@
     <item>
         <shape>
             <corners android:radius="4dp" />
-            <solid android:color="@color/white" />
+            <solid android:color="@android:color/white" />
         </shape>
     </item>
 </selector>
