--- a/app/src/main/res/layout/ad_common_native_card_large.xml
+++ b/app/src/main/res/layout/ad_common_native_card_large.xml
@@ -14,12 +14,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/white">
+            android:background="@android:color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@android:color/white"
                 android:orientation="vertical">
 
                 <androidx.percentlayout.widget.PercentRelativeLayout
@@ -133,7 +133,7 @@
             android:elevation="4dp"
             android:gravity="center"
             android:text="Learn More"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/sp_20"
             android:textStyle="bold" />
     </LinearLayout>
