--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -328,6 +328,12 @@
                 android:onClick="onClick"
                 android:text="展示广告推广" />
 
+            <Button
+                android:id="@+id/bcsdk_demo"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_48"
+                android:onClick="onClick"
+                android:text="BcSdk测试" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
